--- a/index.html
+++ b/index.html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Calculator</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="main">
-        <p class="title">CALCULATOR</p>
-        <div class="inputScreen">
-            <p class="display">0</p>
-        </div>
-        <div class="container">
-            <button class="clear">Clear</button>
-            <button class="undo"><-</button>
-            <button class="operate" value="+">+</button>
-            <button class="number" value="1">1</button>
-            <button class="number" value="2">2</button>
-            <button class="number" value="3">3</button>
-            <button class="operate" value="-">-</button>
-            <button class="number" value="4">4</button>
-            <button class="number" value="5">5</button>
-            <button class="number" value="6">6</button>
-            <button class="operate" value="/">/</button>
-            <button class="number" value="7">7</button>
-            <button class="number" value="8">8</button>
-            <button class="number" value="9">9</button>
-            <button class="operate" value="*">*</button>
-            <button class="number" value="0">0</button>
-            <button class="dot" value=".">.</button>
-            <button class="equals" value="=">=</button>
-    
-        </div>
-    </div>
+	<div id="main">
+		<p class="title">CALCULATOR</p>
+		<div class="inputScreen">
+			<p class="display">0</p>
+		</div>
+		<div class="container">
+			<button class="clear">CA</button>
+			<button data-key="111" class="operate" value="/">÷</button>
+			<button data-key="109" class="operate" value="-">-</button>
+			<button class="undo">←</button>
+			<button data-key="55 103" class="number" value="7">7</button>
+			<button data-key="56 104" class="number" value="8">8</button>
+			<button data-key="57 105" class="number" value="9">9</button>
+			<button data-key="106" class="operate" value="*">*</button>
+			<button data-key="52 100" class="number" value="4">4</button>
+			<button data-key="53 101" class="number" value="5">5</button>
+			<button data-key="54 102" class="number" value="6">6</button>
+			<button data-key="107" class="operate" value="+">+</button>
+			<button data-key="49 97" class="number" value="1">1</button>
+			<button data-key="50 98" class="number" value="2">2</button>
+			<button data-key="51 99" class="number" value="3">3</button>
+			<button data-key="13" class="equals" value="=">=</button>
+			<button data-key="" class="operate" value="%">%</button>
+			<button data-key="48 96" class="number" value="0">0</button>
+			<button data-key="59 110" class="dot" value=".">.</button>
 
-    <script src="script.js"></script>
+		</div>
+	</div>
+	<div class="testing"></div>
+
+	<script src="script.js"></script>
 </body>
 </html>
