add animatiom to the click button

--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
 			<p class="display">0</p>
 		</div>
 		<div class="container">
-			<button class="clear">CA</button>
+			<button data-key="46" class="clear ca">CA</button>
 			<button data-key="111" class="operate" value="/">÷</button>
 			<button data-key="109" class="operate" value="-">-</button>
-			<button class="undo">←</button>
-			<button data-key="55 103" class="number" value="7">7</button>
-			<button data-key="56 104" class="number" value="8">8</button>
-			<button data-key="57 105" class="number" value="9">9</button>
+			<button data-key="8" class="undo">←</button>
+			<button data-key="103 55" class="number" value="7">7</button>
+			<button data-key="104 56" class="number" value="8">8</button>
+			<button data-key="105 57" class="number" value="9">9</button>
 			<button data-key="106" class="operate" value="*">*</button>
-			<button data-key="52 100" class="number" value="4">4</button>
-			<button data-key="53 101" class="number" value="5">5</button>
-			<button data-key="54 102" class="number" value="6">6</button>
+			<button data-key="100 52" class="number" value="4">4</button>
+			<button data-key="101 53" class="number" value="5">5</button>
+			<button data-key="102 54" class="number" value="6">6</button>
 			<button data-key="107" class="operate" value="+">+</button>
-			<button data-key="49 97" class="number" value="1">1</button>
-			<button data-key="50 98" class="number" value="2">2</button>
-			<button data-key="51 99" class="number" value="3">3</button>
+			<button data-key="97 49" class="number" value="1">1</button>
+			<button data-key="98 50" class="number" value="2">2</button>
+			<button data-key="99 51" class="number" value="3">3</button>
 			<button data-key="13" class="equals" value="=">=</button>
-			<button data-key="" class="operate" value="%">%</button>
-			<button data-key="48 96" class="number" value="0">0</button>
-			<button data-key="59 110" class="dot" value=".">.</button>
+			<button data-key="165" class="operate" value="%">%</button>
+			<button data-key="96 48" class="number" value="0">0</button>
+			<button data-key="110" class="dot" value=".">.</button>
 
 		</div>
 	</div>
